Bug 363606 - Different python sessions shouldn't share the same variables
Summary: Different python sessions shouldn't share the same variables
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: python2-backend (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Filipe Saraiva
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-27 20:55 UTC by Alexander Semke
Modified: 2018-08-11 19:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Semke 2016-05-27 20:55:10 UTC
Currently, variables defined in one session are also visible in all other python sessions created later. This is not the expected behaviour of a "session".

Reproducible: Always

Steps to Reproduce:
1. start a python session
2. create a variable, for example a=5
3. start another python session
4. observe the existence of the variable "a" in the second session
Comment 1 Nikita Sirgienko 2018-08-11 19:52:39 UTC
Git commit a710d847e02aeeaf902995701275d317e082afd9 by Nikita Sirgienko.
Committed on 11/08/2018 at 19:50.
Pushed by sirgienko into branch 'master'.

Rewrite Python2 to Dbus server and move common code beatween Python2 and Python3 backends to common files
FIXED-IN: 18.12

Differential Revision: https://phabricator.kde.org/D14680

M  +2    -1    src/backends/python/CMakeLists.txt
R  +12   -6    src/backends/python/pythonserver.cpp [from: src/backends/python3/python3server/python3server.cpp - 078% similarity]
R  +4    -4    src/backends/python/pythonserver.h [from: src/backends/python3/python3server/python3server.h - 089% similarity]
M  +90   -2    src/backends/python/pythonsession.cpp
M  +11   -4    src/backends/python/pythonsession.h
M  +2    -0    src/backends/python2/CMakeLists.txt
A  +16   -0    src/backends/python2/python2server/CMakeLists.txt
C  +3    -3    src/backends/python2/python2server/main.cpp [from: src/backends/python3/python3server/main.cpp - 093% similarity]
M  +8    -37   src/backends/python2/python2session.cpp
M  +0    -15   src/backends/python2/python2session.h
M  +1    -1    src/backends/python3/python3server/CMakeLists.txt
M  +2    -2    src/backends/python3/python3server/main.cpp
M  +1    -104  src/backends/python3/python3session.cpp
M  +0    -21   src/backends/python3/python3session.h

https://commits.kde.org/cantor/a710d847e02aeeaf902995701275d317e082afd9