Rewrite Python2 to Dbus server and move common code beatween Python2 and Python3 backends to common files

BUG: 363606
FIXED-IN: 18.12

Differential Revision: https://phabricator.kde.org/D14680