src/backends/python2/python2session.h
@@ -23,28 +23,13 @@
 
 #include "../python/pythonsession.h"
 
-struct _object;
-typedef _object PyObject;
-
 class Python2Session : public PythonSession
 {
   public:
     Python2Session(Cantor::Backend* backend);
 
-    void login() Q_DECL_OVERRIDE;
-
     bool integratePlots() const Q_DECL_OVERRIDE;
     QStringList autorunScripts() const Q_DECL_OVERRIDE;
-
-  private:
-    void runPythonCommand(const QString& command) const Q_DECL_OVERRIDE;
-    QString getOutput() const Q_DECL_OVERRIDE;
-    QString getError() const Q_DECL_OVERRIDE;
-
-    QString pyObjectToQString(PyObject* obj) const;
-
-  private:
-    PyObject *m_pModule;
 };
 
 #endif
